# WORR

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILDING.md  BUILD_QUIRKS.md  README.md  TODO.md  build.sh  copy-game-dll.py  embed.py  meson.build  meson.native.ini  meson_options.txt  version.py
.tmp/: worr-github-project-import-2026-02-27.csv
dev/: meson-log.txt  setup_meson_env.sh
doc/: agents-cvar-naming-2026-01-23.md  audio-doppler-implementation-fixes-2026-01-22.md  audio-doppler-occlusion-fix.md  audio-occlusion-doppler-upgrade.md  audio-spatial-improvements-2026-01-19.md  auto-updater-bootstrapper.md  bgame-module.md  build-archiver-thin-fix-2026-01-26.md  build-linkage-fix-2026-01-22.md  build-warnings-cleanup-2026-01-25.md  build-warnings-resolution.md  cgame-build-cleanup-2026-01-28.md  cgame-build-fixes.md  cgame-draw-migration.md  cgame-entity-migration-2026-01-28.md  cgame-entity-port-2026-01-28.md  cgame-footstep-id-clamp-2026-01-28.md  cgame-footstep-registration-guard-2026-01-28.md  cgame-hud-migration-2026-01-22.md  cgame-hud-scoreboard-2026-01-22.md  cgame-hud-scoreboard-extensions-2026-01-22.md  cgame-import-init.md  cgame-load-order-currentdir.md  cgame-particle-accuracy-alignment-2026-01-28.md  cgame-particle-accuracy-fix-2026-01-28.md  cgame-particle-init-fix-2026-01-28.md  cgame-prediction-migration-2026-01-28.md  cgame-ui-font-sized-imports-2026-01-22.md  cgame-ui-hover-mainmenu.md  cgame-ui-json.md  cgame-ui-language-menu-dropdown-columns-2026-01-25.md  cgame-ui-player-hints-keybinds.md  cgame-ui-player-preview-bind-icons.md  cgame-ui-port.md  cgame-ui-widget-modernization-2026-01-25.md  cgame-ui-worr-menu-close-fixes-2026-01-22.md  cgame-wheel-cpp-compat.md  cgame-wheel-weapon-bar.md  client-cpp-migration-build-fixes.md  client-entity-port-build-fixes-2026-01-28.md  (+156 more)
docs-dev/: README.md  agents-cvar-prefixes-2026-01-23.md  audio-doppler-implementation-fixes-2026-01-22.md  audio-eax-spatial-awareness-fixes-2026-02-27.md  audio-eax-spatial-gap-closure-2026-02-27.md  audio-eax-spatial-migration-2026-02-19.md  audio-occlusion-refinement.md  audio-occlusion-spatial-upgrade-2026-01-19.md  audio-occlusion.md  audio-projectile-doppler-origin-merge-fix-2026-02-27.md  audio-projectile-loop-attenuation-fallback-fix-2026-02-27.md  audio-projectile-loop-attenuation-parse-fix-2026-02-27.md  auto-updater-bootstrapper.md  bgame-legacy-header-cleanup-2026-01-17.md  bobskip.md  bold-name-visibility-2026-01-25.md  build-cgame-utf8-utils-link-2026-01-20.md  build-errors-warnings-2026-01-17.md  build-fixes-cgame-ui.md  build-warning-cleanup-2026-01-15.md  build-warning-cleanup-2026-01-22.md  build-warning-cleanup-2026-02-27.md  build-warning-fixes-2026-01-20.md  builddir-reconfigure-2026-01-25.md  centerprint-ui-fonts-notify-bold-2026-01-25.md  cgame-cpp-latest-migration.md  cgame-entity-runtime-crash-fix-2026-01-28.md  cgame-footstep-material-assertion-fix-2026-01-28.md  cgame-hud-320x240.md  cgame-hud-fps-display-2026-01-22.md  cgame-hud-scoreboard-2026-01-22.md  cgame-hud-scoreboard-extensions-2026-01-22.md  (+201 more)
q2proto/tests/: meson.build
q2proto/tests/build_q2pro_ext/: build_q2pro_ext.c  q2proto_config.h
q2proto/tests/build_q2pro_ext_v2/: build_q2pro_ext_v2.c  q2proto_config.h
q2proto/tests/build_q2repro/: build_q2repro.c  q2proto_config.h
q2proto/tests/build_single_source/: main.c  q2proto_config.h  repro.c  repro.h  vanilla.c  vanilla.h
q2proto/tests/build_vanilla/: build_vanilla.c  q2proto_config.h
q2proto/tests/inc/tests/: defs.h
q2proto/tests/inc/tests/types/: q2pro_ext.h  q2pro_ext_v2.h  q2repro.h  vanilla.h
src/windows/: ac.cpp  client.c  client.cpp  client.h  client.hpp  debug.c  debug.cpp  dsound.cpp  egl.c  egl.cpp  egl_import.hpp  hunk.cpp  meson.build  system.c  system.cpp  wave.cpp  wgl.c  wgl.cpp
src/windows/res/: cgame.rc  game.rc  q2pro.rc  q2proded.rc  sgame.rc  worr.exe.manifest  worr.rc  worrded.exe.manifest  worrded.rc  worrupdater.exe.manifest  worrupdater.rc
subprojects/packagefiles/freetype2/: README.md  meson.build
subprojects/packagefiles/rmlui/: meson.build
subprojects/rerelease-game/: .gitignore  README.md  meson.build  version.py
subprojects/rerelease-game/.github/workflows/: build.yml
subprojects/rerelease-game/original/baseq2/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_boss2.c  m_boss31.c  m_boss32.c  m_chick.c  m_flyer.c  m_gunner.c  m_hover.c  m_medic.c  m_move.c  m_mutant.c  m_parasite.c  m_supertank.c  p_client.c  p_trail.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
subprojects/rerelease-game/original/ctf/: g_cmds.c  g_combat.c  g_ctf.c  g_ctf.h  g_func.c  g_items.c  g_local.h  g_main.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_utils.c  g_weapon.c  game.h  p_client.c  p_menu.c  p_view.c  p_weapon.c  q_shared.c
subprojects/rerelease-game/original/rogue/: dm_tag.c  g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_newai.c  g_newdm.c  g_newweap.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_berserk.c  m_boss2.c  m_boss31.c  m_boss32.c  m_carrier.c  m_chick.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_medic.c  m_move.c  m_move2.c  m_mutant.c  m_parasite.c  m_soldier.c  m_stalker.c  (+10 more)
subprojects/rerelease-game/original/xatrix/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_boss2.c  m_boss31.c  m_boss32.c  m_boss5.c  m_brain.c  m_chick.c  m_fixbot.c  m_flyer.c  m_gekk.c  m_gunner.c  m_hover.c  m_medic.c  m_move.c  m_mutant.c  m_parasite.c  m_soldier.c  m_supertank.c  p_client.c  p_trail.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
subprojects/rerelease-game/rerelease/: bg_local.h  cg_screen.cpp  g_local.h  g_save.cpp  game.h  m_guncmdr.cpp  m_move.cpp  p_hud.cpp
subprojects/rerelease-game/rerelease/rogue/: m_rogue_widow2.cpp
(+1466 files in other folders)
